--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,15 +4,17 @@ name: Build Android App
 
 on:
   push:
-    branches: [ "master" ] # This runs the build every time you push to the main branch
+    branches: [ "master" ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest # Use a fresh virtual machine for the build
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # This fetches all history and tags
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -30,5 +32,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug.apk # The name of the file you will download
-          path: app/build/outputs/apk/debug/app-debug.apk # The path to the APK after the build
+          name: app-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
