--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,11 +26,13 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle
-        run: ./gradlew assembleDebug -x lint -x test # Skips lint and test tasks
+      - name: Build a Specific Flavor
+        # This command builds a specific combination of flavors to avoid the dependency error.
+        run: ./gradlew assembleProductionVanillaOpenSourceDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+          name: app-production-vanilla-open-source-debug.apk
+          # The path must match the specific flavor we built.
+          path: app/build/outputs/apk/productionVanillaOpenSource/debug/app-production-vanilla-open-source-debug.apk
