--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,6 +24,7 @@ jobs:
           cache: 'gradle'
           
       - name: Install NDK and CMake
+        # This step uses the Android SDK manager to install the required native build tools
         run: echo "y" | sudo ${ANDROID_HOME}/cmdline-tools/latest/bin/sdkmanager --install "cmake;3.18.1"
 
       - name: Grant execute permission for gradlew
@@ -40,4 +41,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-production-vanilla-open-source-debug.apk
+          # The path must match the specific flavor we built.
           path: app/build/outputs/apk/productionVanillaOpenSource/debug/app-production-vanilla-open-source-debug.apk
