--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,14 +8,17 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    # Use the official Ubuntu 22.04 runner for the most up-to-date environment
+    runs-on: ubuntu-22.04
 
     steps:
+      # 1. Checks out the repository, including all git history for versioning
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # This fetches all history and tags
+          fetch-depth: 0 
 
+      # 2. Sets up the Java environment needed for Gradle
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -23,23 +26,25 @@ jobs:
           distribution: 'temurin'
           cache: 'gradle'
           
-      - name: Install NDK and CMake
-        # This step uses the Android SDK manager to install the required native build tools
+      # 3. Installs the specific version of CMake your project needs
+      - name: Install required Android SDK components
         run: echo "y" | sudo ${ANDROID_HOME}/cmdline-tools/latest/bin/sdkmanager --install "cmake;3.18.1"
 
+      # 4. Fixes the signing key permission error by creating the folder and setting ownership
+      - name: Fix Keystore Permissions
+        run: sudo mkdir -p /home/runner/.config/.android && sudo chown -R runner:runner /home/runner/.android /home/runner/.config
+
+      # 5. Grants execute permission to the Gradle wrapper script
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Create debug keystore directory
-        # This fixes the "Unable to create debug keystore" error
-        run: mkdir -p /home/runner/.android
-        
+      # 6. Builds the exact app flavor required, producing the APK
       - name: Build a Specific Flavor
         run: ./gradlew assembleProductionVanillaOpenSourceDebug
 
+      # 7. Uploads the final APK file so you can download it
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: app-production-vanilla-open-source-debug.apk
-          # The path must match the specific flavor we built.
           path: app/build/outputs/apk/productionVanillaOpenSource/debug/app-production-vanilla-open-source-debug.apk
